hopefully it works better???

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@
     color: #E6B325;
     display: flex;
     margin-top: 50vh;
+    text-shadow: 2px 2px 4px rgb(43, 42, 42);
 }
 
 .p2 {
@@ -58,6 +59,7 @@
     color: #751303;
     display: flex;
     margin-top: 0;
+    text-shadow: 2px 2px 4px rgb(43, 42, 42);
 }
 
 .p3 {
@@ -68,6 +70,7 @@
     color: #E6B325;
     display: flex;
     padding-bottom: 9.5rem;
+    text-shadow: 2px 2px 4px rgb(43, 42, 42);
 }
 
 #text{
