--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@
     font-size: 8em;
     justify-content: center;
     text-align: center;
-    color: #E6B325;
+    color: #594a21;
     display: flex;
-    margin-top: 50vh;
+    margin-top: 60vh;
     font-weight: 300;
 }
 
@@ -66,7 +66,7 @@
     font-size: 3em;
     justify-content: center;
     text-align: center;
-    color: #E6B325;
+    color: #594a21;
     display: flex;
     margin-bottom: 9.5rem;
     font-weight: 300;
