i promise i'll get this

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@
     justify-content: center;
     text-align: center;
     color: #f3e0ad;
-    text-shadow: #594a21;
+    text-shadow: 2px 2px 4px #594a21;
     display: flex;
     margin-top: 70vh;
 }
@@ -67,7 +67,7 @@
     justify-content: center;
     text-align: center;
     color: #f3e0ad;
-    text-shadow: #594a21;
+    text-shadow: 2px 2px 4px #594a21;
     display: flex;
     margin-bottom: 9rem;
 }
