--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
     justify-content: center;
     text-align: center;
     color: #751303;
-    display: absolute;
+    display: flex;
 }
 
 .p3 {
