second line on page

--- a/style.css
+++ b/style.css
@@ -73,3 +73,10 @@
     margin-top: 60vh;
     font-family: 'Attic';
 }
+
+#text2{
+    color: #E6B325;
+    font-size: 1.5em;
+    text-align: center;
+    font-family: 'Attic';
+}
