--- a/style.css
+++ b/style.css
@@ -66,6 +66,20 @@
     padding-bottom: 2rem;
 }
 
+.mainThing{
+    color: #E6B325;
+    font-size: 8em;
+    text-align: center;
+    margin-top: 60vh;
+    font-family: 'Attic';
+}
+
+.smallP{
+    color: #E6B325;
+    font-family: 'Attic';
+    font-size: 1.5em;
+}
+
 #text{
     color: #E6B325;
     font-size: 8em;
