--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@
 .smallP{
     color: #E6B325;
     font-family: 'Attic';
-    font-size: 1.5em;
+    font-size: 3em;
+    text-align: center;
 }
 
 #text{
